# algebraic-circuit-analyzer

./: main.py  pyproject.toml  testClasses.py
src/components/: components.py
