[tool.poetry]
name = "cicas"
version = "0.1.0"
description = ""
authors = ["Santiago Santana <santana.santiago@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = {extras = ["all"], version = "^2.5"}
matplotlib = "^3.3.3"
sympy = "1.7.1"
mypy = "^0.790"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
